
2004/09/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- waitcallback.c: now reuses templates which are currently entered if
  they match the requested one
- msgengine.c: now looks for groups not only at the XML root but at every
  XML node along the current path


===========================================================================
MARK: released gwenhywfar-1.1 (2004/09/15)
===========================================================================


2004/09/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in XML code


2004/09/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a function to GWEN_DBIO which allows to check whether a given file
  is supported by a given plugin
- plugin descriptions now have a field for the filename
- added flags for XML file reading


===========================================================================
MARK: released gwenhywfar-1.0.1 (2004/09/10)
===========================================================================


2004-09-09   Christian Stimming <stimming@tuhh.de>

	* src/base/logger.h: Enclose __attribute__deprecated into ifdefs
	to hide it for non-gcc compilers.


2004/09/08: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in typemaker
- fixed a bug in nettransportssl.c


2004-09-03   Christian Stimming <stimming@tuhh.de>

	* tools/typemaker/code_c.c: Add include config.h in the
	output. Make the auto-generation warning in the output more clear.


===========================================================================
MARK: released gwenhywfar-1.0.0 (2004/09/02)
===========================================================================


2004/09/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------