@@ -3,8 +3,10 @@
 -------------------------------------------------
 - waitcallback.c: now reuses templates which are currently entered if
   they match the requested one
-- msgengine.c: now looks for groups not only at the XML root but at every
-  XML node along the current path
+- msgengine.c: 
+  - now looks for groups not only at the XML root but at every
+    XML node along the current path
+  - now looks for groups under their "id" and (if not found) "name"
 
 
 ===========================================================================
